--- a/argocd_deploy/apps/kube_prometheus_stack.yaml
+++ b/argocd_deploy/apps/kube_prometheus_stack.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/AndreaGiardini/GitOps-workshop.git # REPLACE ME!
+    repoURL: https://github.com/veronica81/GitOps-workshop.git # REPLACE ME!
     targetRevision: HEAD
     path: app_kube-prometheus-stack
     helm:
@@ -25,3 +25,7 @@ spec:
       allowEmpty: false
     syncOptions:
       - CreateNamespace=true
+resources:
+- resources/namespace.yaml
+- apps/argocd.yaml
+- apps/kube_prometheus_stack.yaml   
