--- a/argocd_deploy/kustomization.yaml
+++ b/argocd_deploy/kustomization.yaml
@@ -6,12 +6,12 @@ bases:
 
 resources:
 - resources/namespace.yaml
-  #- apps/argocd.yaml # Edit the file before applying!
-  #- apps/kube_prometheus_stack.yaml # Edit the file before applying!
+- apps/argocd.yaml # Edit the file before applying!
+- apps/kube_prometheus_stack.yaml # Edit the file before applying!
   #- https://raw.githubusercontent.com/argoproj-labs/argocd-notifications/v1.0.2/manifests/install.yaml # ArgoCD Notifications
 
-  #patchesStrategicMerge:
-  #- overlays/argocd-cm.yaml
-  #- overlays/argocd-repo-server-deploy.yaml
+patchesStrategicMerge:
+- overlays/argocd-cm.yaml
+- overlays/argocd-repo-server-deploy.yaml
   #- https://raw.githubusercontent.com/argoproj-labs/argocd-notifications/v1.0.2/catalog/install.yaml # ArgoCD Notifications
   #- overlays/discord_webhook_notification.yaml
